--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <title>Data Table</title>
 </head>
 <body>
-
+  <div class="page-count-info">
+  </div>
   <div class="data-table-container"></div>
+  <div class="page-info">
+   
+  </div>
   
   <script src="./assets/js/DataTable.js" type="module"></script>
 </body>
