--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>Data Table</title>
 </head>
 <body>
-  <div class="page-count-info">
-  </div>
+  <div class="table-options">
+    <div class="page-count-info">
+    </div>
+  </div> 
   <div class="data-table-container"></div>
   <div class="page-info">
    
