--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Data Table</title>
 </head>
 <body>
@@ -16,7 +17,6 @@
   <div class="page-info">
    
   </div>
-  
   <script src="./assets/js/DataTable.js" type="module"></script>
 </body>
 </html>
