--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <div class="page-info">
    
   </div>
-  <script src="./assets/js/DataTable.js" type="module"></script>
+  <script src="./assets/js/index.js" type="module"></script>
 </body>
 </html>
+
+
+
